# Decoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CED_Decoder_App/: CMakeLists.txt  DecoderApp.cpp  DecoderApp.h
CED_Library/: CMakeLists.txt
Chardet_Decoder_App/: CMakeLists.txt  testapp.cpp
Chardet_Library/: CMakeLists.txt
Chardet_Library/src/: CharDistribution.h  JpCntx.cpp  JpCntx.h  chardet.cpp  chardet.h  nsBig5Prober.cpp  nsBig5Prober.h  nsCharSetProber.cpp  nsCharSetProber.h  nsCodingStateMachine.h  nsEUCJPProber.cpp  nsEUCJPProber.h  nsEUCKRProber.cpp  nsEUCKRProber.h  nsEUCTWProber.cpp  nsEUCTWProber.h  nsEscCharsetProber.cpp  nsEscCharsetProber.h  nsEscSM.cpp  nsGB2312Prober.cpp  nsGB2312Prober.h  nsHebrewProber.cpp  nsHebrewProber.h  nsLatin1Prober.cpp  nsLatin1Prober.h  nsMBCSGroupProber.cpp  nsMBCSGroupProber.h  nsMBCSSM.cpp  nsPkgInt.h  nsSBCSGroupProber.cpp  nsSBCSGroupProber.h  nsSBCharSetProber.cpp  nsSBCharSetProber.h  nsSJISProber.cpp  nsSJISProber.h  nsUTF8Prober.cpp  nsUTF8Prober.h  nsUniversalDetector.cpp  nsUniversalDetector.h  nscore.h
Chardet_Library/tables/: EUCTWFreq.tab  LangArabicModel.cpp  LangBulgarianModel.cpp  LangCyrillicModel.cpp  LangDanishModel.cpp  LangEsperantoModel.cpp  LangFrenchModel.cpp  LangGermanModel.cpp  LangGreekModel.cpp  LangHebrewModel.cpp  LangHungarianModel.cpp  LangSpanishModel.cpp  LangThaiModel.cpp  LangTurkishModel.cpp  LangVietnameseModel.cpp
Icu4c_Library/: CMakeLists.txt
Icu4c_Library/src/: general_decoder.hpp  icu_decoder_impl.hpp
Icu4c_Library/test_files/: big5.txt  demo.cpp  iso-8859-5.txt  koi-8r.txt  utf-16.txt  utf-32.txt  utf-8.txt  win1251.txt
Uchardet_Library/: CMakeLists.txt
Uchardet_Library/src/: CMakeLists.txt  CTestTestfile.cmake  nsEscCharsetProber.cpp  nsMBCSGroupProber.cpp  nsUniversalDetector.cpp  nsUniversalDetector.h  uchardet.cpp
Uchardet_Library/src/tools/: CTestTestfile.cmake  uchardet.cpp
testing/: CMakeLists.txt  CTestTestfile.cmake  common_decoders.h  gtest_ext_combine.h  rununittest.cpp
